// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders 1`] = `
<button
  class="sc-bdfCkl sc-gsTChe ePIxA-d huZGjn"
>
  foo
</button>
`;

exports[`renders as a secondary button 1`] = `
<button
  class="sc-bdfCkl sc-gsTChe hmUCm huZGjn"
>
  foo
</button>
`;
